# news-curator

./: Cargo.toml  Dockerfile  README.md  news_config.yml
.github/workflows/: ci.yaml  publish.yaml
resources/: index.css
samples/: config.yml
src/: config.rs  main.rs  program.rs  result_ops.rs  site.rs  state.rs  types.rs
templates/: category_page.html  index.html  source_page.html
