[package]
name = "news-curator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11.18", features = ["blocking"] }
chrono = { version = "0.4.26", features = ["serde"] }
rss = "2.0.6"
atom_syndication = "0.12.2"
tera = "1.19.0"
